# galaxy-tools-rust

./: Cargo.toml  LICENSE  README.md
filter/: Cargo.toml  build.sh  meta.yaml
filter/src/: functions.rs  main.rs  test.rs
grouping/: Cargo.toml
grouping/src/: main.rs  operations.rs
remove_beginning/: Cargo.toml  build.sh  meta.yaml
remove_beginning/src/: main.rs  tests.rs
test_utils/src/: lib.rs
