[package]
name = "grouping"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
anyhow = "1.0"
rand = "0.8.4"
indexmap = "1.9.3"
gpoint = "0.2"

[dev-dependencies]
test_utils = { path = "../test_utils" }

[profile.release]
lto = true
panic = "abort"
strip = true
